# fast-bpe

./: Cargo.toml  README.md  out.txt  tokens.txt
benches/: tokenize.rs
examples/: cli.rs
src/: lib.rs  main.rs
