[package]
name = "fast-bpe"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
trie-rs = "0.4.2"
bumpalo = { version = "3.16.0", features = ["collections", "allocator_api", "allocator-api2"] }
hashbrown = { version = "0.14.5", features = ["nightly"] }
rustc-hash = "2.0.0"
colored = "2.1.0"

[profile.release]
lto = true
codegen-units = 1
